e2e/istio/cluster/manifests/ingress-gateway.yaml
# Copyright 2025 Tetrate
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-echo
  namespace: http-echo
spec:
  selector:
    istio: ingress
  servers:
    - hosts:
      - "http-echo.authservice.internal"
      port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: http-echo-certs
    - hosts:
      - "http-echo.authservice.internal"
      port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-echo
  namespace: http-echo
spec:
  hosts:
    - "http-echo.authservice.internal"
  gateways:
    - http-echo
  http:
    - route:
        - destination:
            host: http-echo.http-echo.svc.cluster.local
            port:
              number: 8080
