e2e/istio/cluster/manifests/keycloak.yaml
# Copyright 2025 Tetrate
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  type: NodePort  # Make it accessible form the host without having to install MetalLB or others
  ports:
    - port: 8080
      targetPort: 8080
      name: http-keycloak
      nodePort: 30001  # Expose it directly to the e2e tests
      protocol: TCP
  selector:
    app: keycloak
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
      version: v1
  template:
    metadata:
      labels:
        app: keycloak
        version: v1
    spec:
      serviceAccountName: keycloak
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.6
          imagePullPolicy: IfNotPresent
          args:
            - "start-dev"
          ports:
            - name: keycloak
              containerPort: 8080
              protocol: TCP
          env:
            - name: KEYCLOAK_ADMIN
              value: admin
            - name: KEYCLOAK_ADMIN_PASSWORD
              value: admin
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: 8080
---
apiVersion: batch/v1
kind: Job
metadata:
  name: setup-keycloak
  namespace: keycloak
spec:
  template:
    spec:
      initContainers:
        - name: wait-for-keycloak
          image: busybox:stable
          command: ["sh", "-c", "until nc -v -z -w3 keycloak 8080; do sleep 2; done"]
      containers:
        - name: setup-keycloak
          image: quay.io/keycloak/keycloak:23.0.6
          command: ["bash", "/opt/keycloak/scripts/setup.sh"]
          env:
            - name: KEYCLOAK_ADMIN
              value: admin
            - name: KEYCLOAK_ADMIN_PASSWORD
              value: admin
          volumeMounts:
            - name: setup-script
              mountPath: /opt/keycloak/scripts
      volumes:
        - name: setup-script
          configMap:
            name: setup-keycloak
      restartPolicy: Never
  backoffLimit: 4
---
kind: ConfigMap
apiVersion: v1
metadata:
  name: setup-keycloak
  namespace: keycloak
data:
  setup.sh: |
    KEYCLOAK_SERVER="http://keycloak:8080"
    REALM="master"
    USERNAME=authservice
    PASSWORD=authservice
    CLIENT_ID=authservice
    CLIENT_SECRET=authservice-secret
    REDIRECT_URL=https://http-echo.authservice.internal/callback
    
    set -ex
    
    /opt/keycloak/bin/kcadm.sh create users \
    -s username="${USERNAME}" \
    -s enabled=true \
    --server "${KEYCLOAK_SERVER}" \
    --realm "${REALM}" \
    --user "${KEYCLOAK_ADMIN}" \
    --password "${KEYCLOAK_ADMIN_PASSWORD}"
    
    /opt/keycloak/bin/kcadm.sh set-password \
    --username "${USERNAME}" \
    --new-password "${PASSWORD}" \
    --server "${KEYCLOAK_SERVER}" \
    --realm "${REALM}" \
    --user "${KEYCLOAK_ADMIN}" \
    --password "${KEYCLOAK_ADMIN_PASSWORD}"
    
    /opt/keycloak/bin/kcreg.sh create \
    -s clientId="${CLIENT_ID}" \
    -s secret="${CLIENT_SECRET}" \
    -s "redirectUris=[\"${REDIRECT_URL}\"]" \
    -s consentRequired=false \
    --server "${KEYCLOAK_SERVER}" \
    --realm "${REALM}" \
    --user "${KEYCLOAK_ADMIN}" \
    --password "${KEYCLOAK_ADMIN_PASSWORD}"
